style: fix overflow-x

--- a/assets/css/layout/article.css
+++ b/assets/css/layout/article.css
@@ -3,25 +3,28 @@
   padding: 16.4375rem 0;
 }
 
-.banner-cta {
+.banner-cta-container {
   width: 100%;
-  height: 240px;
+  padding: 0 2rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%) translateY(50%);
+}
+
+.banner-cta {
   border-radius: 6px;
   background-color: var(--green);
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 50%);
+  padding: 2rem;
 }
 
 .banner-cta-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 6.25rem;
 }
 
 .banner-cta-content h3 {
@@ -77,7 +80,7 @@
   }
 
   .banner-cta {
-    height: 280px;
+    padding: 1rem 2rem;
   }
 
   .banner-cta-content {
@@ -85,6 +88,5 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    padding: 6.25rem;
   }
 }
