--- a/assets/css/layout/hero.css
+++ b/assets/css/layout/hero.css
@@ -33,17 +33,20 @@
   letter-spacing: 1px;
 }
 
+.hero-numbers-container {
+  padding: 0 2rem;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(50%);
+}
+
 .hero-numbers {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   border-radius: 6px;
-  width: 100%;
-  padding: 3rem 2rem;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(50%);
   background-color: var(--white-secondary);
   box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.2);
 }
@@ -55,9 +58,13 @@
 .numbers:nth-child(2) {
   border-left: 1px solid var(--green-light);
   border-right: 1px solid var(--green-light);
+  padding: 2rem 0;
 }
 
 @media (max-width: 820px) {
+  .hero-numbers-container {
+    padding: 0 1rem;
+  }
   .hero-content {
     grid-template-columns: 1fr;
     justify-items: center;
@@ -75,7 +82,6 @@
     border-right: none;
     border-bottom: 1px solid var(--green-light);
     border-top: 1px solid var(--green-light);
-    padding: 1rem 0;
     margin: 1rem 0;
   }
 }
