--- a/assets/css/layout/services.css
+++ b/assets/css/layout/services.css
@@ -1,5 +1,5 @@
 .services {
-  height: 1082px;
+  padding: 2rem 0 16.4375rem 0;
   background-color: var(--white-secondary);
 }
 
